Modified theme to avoid vertical overflow in MathJax block wrappers.

--- a/source/_assets/stylesheets/_styles.scss
+++ b/source/_assets/stylesheets/_styles.scss
@@ -58,3 +58,7 @@ img {
 	border-top-color: $bg-color !important;
 	border-bottom-color: $bg-color !important;
 }
+
+.mathjax-block-wrapper > .MathJax_Display {
+	overflow-y: hidden;
+}
